Fri Jun 26 18:02:50 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_28.

Fri Jun 26 11:01:26 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* string.c (str_aset_method): needed to convert to string.

Thu Jun 25 02:05:50 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_search): optimize for `.*' at beginning of the
	  pattern.

	* regex.c (re_search): optimize for character class repeat at
	  beginning of the pattern.

	* regex.c (re_compile_pattern): detect optimization potential for
	  the compiled patterns.

Thu Jun 25 00:02:26 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* re.c (reg_s_new): flag value was wrong.

Wed Jun 24 23:45:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_search): wrong anchor handling for reverse search.

Wed Jun 24 02:18:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (mlhs): `((a,b)),c = [[1,2]],3' assigns a=1,b=2,c=3.

Tue Jun 23 11:46:16 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (yylex): `&&=' and `||=' added.

Sat Jun 20 02:53:50 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (assignable): nesting local variables should have higher
 	  priority than normal local variables for assignment too.

Fri Jun 19 18:28:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_27.

Fri Jun 19 14:34:49 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (assign): support hack for nested multiple assignment.

	* parse.y (mlhs): nested multiple assignment.

	* eval.c (rb_eval): in-block variables now honors static scope.

	* configure.in: RSHIFT check moved to configure.

Thu Jun 18 16:46:04 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_26.

Thu Jun 18 13:37:19 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* file.c (file_s_ftype): uses lstat(2) instead of stat(2).

	* dir.c (dir_s_glob): there can be buffer overrun, check added.
